--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,119 @@
 body {
-  background-color: #666;
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
+  background-color: #FEFBF6;
+  overflow-x: hidden;
+}
+body nav {
+  background-color: #FFFFFF;
+  width: 100%;
+  border-bottom: 3px solid #F5F0E8;
+}
+body .navbar {
+  position: fixed;
+}
+body .logo {
+  width: 100px;
+  height: auto;
+  margin-left: 10px;
+}
+body .navbar-light .navbar-toggler {
+  border: none;
+}
+body .navbar-nav {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+body .navbar-nav .nav-item {
+  margin: auto 20px;
+}
+body .navbar-nav .nav-item .nav-link {
+  color: #949494;
+}
+body .svg1 {
+  fill: none;
+  stroke: #F5F0E8;
+  stroke-width: 8px;
+  stroke-linejoin: round;
+}
+
+#nav-icon3 {
+  width: 40px;
+  height: 20px;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+#nav-icon3 span {
+  display: block;
+  position: absolute;
+  height: 6px;
+  width: 100%;
+  background: #FFC126;
+  border-radius: 6px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
+}
+
+#nav-icon3 span:nth-child(1) {
+  top: 0px;
+}
+
+#nav-icon3 span:nth-child(2), #nav-icon3 span:nth-child(3) {
+  top: 12px;
+}
+
+#nav-icon3 span:nth-child(4) {
+  top: 24px;
+}
+
+#nav-icon3.open span:nth-child(1) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+
+#nav-icon3.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon3.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon3.open span:nth-child(4) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+
+.navbar-toggler:focus {
+  outline: none;
 }
 
 /*# sourceMappingURL=styles.css.map */
