--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,77 @@ body {
   overflow-x: hidden;
 }
 body nav {
+  top: 0;
   background-color: #FFFFFF;
   width: 100%;
   border-bottom: 3px solid #F5F0E8;
+  z-index: 100;
+}
+body nav .navbar-toggler:focus {
+  outline: none;
+}
+body nav #nav-icon3 {
+  width: 40px;
+  height: 20px;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+body nav #nav-icon3 span {
+  display: block;
+  position: absolute;
+  height: 6px;
+  width: 100%;
+  background: #FFC126;
+  border-radius: 6px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
+}
+body nav #nav-icon3 span:nth-child(1) {
+  top: 0px;
+}
+body nav #nav-icon3 span:nth-child(2), body nav #nav-icon3 span:nth-child(3) {
+  top: 12px;
+}
+body nav #nav-icon3 span:nth-child(4) {
+  top: 24px;
+}
+body nav #nav-icon3.open span:nth-child(1) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+body nav #nav-icon3.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+body nav #nav-icon3.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+body nav #nav-icon3.open span:nth-child(4) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
 }
 body .navbar {
   position: fixed;
@@ -32,88 +100,85 @@ body .navbar-nav .nav-item {
 }
 body .navbar-nav .nav-item .nav-link {
   color: #949494;
+  font-family: "Open Sans";
 }
-body .svg1 {
-  fill: none;
-  stroke: #F5F0E8;
-  stroke-width: 8px;
-  stroke-linejoin: round;
-}
-
-#nav-icon3 {
-  width: 40px;
-  height: 20px;
-  position: relative;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: 0.5s ease-in-out;
-  -moz-transition: 0.5s ease-in-out;
-  -o-transition: 0.5s ease-in-out;
-  transition: 0.5s ease-in-out;
-  cursor: pointer;
-}
-
-#nav-icon3 span {
-  display: block;
-  position: absolute;
-  height: 6px;
+body header {
+  top: 0;
   width: 100%;
-  background: #FFC126;
-  border-radius: 6px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: 0.25s ease-in-out;
-  -moz-transition: 0.25s ease-in-out;
-  -o-transition: 0.25s ease-in-out;
-  transition: 0.25s ease-in-out;
+  height: 700px;
+  background-color: #ffffff;
 }
-
-#nav-icon3 span:nth-child(1) {
-  top: 0px;
+body header h1 {
+  padding-top: 300px;
+  margin-left: 100px;
+  font-family: Bree Serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 60px;
+  color: #171717;
 }
-
-#nav-icon3 span:nth-child(2), #nav-icon3 span:nth-child(3) {
-  top: 12px;
+body header h3 {
+  margin-top: 20px;
+  width: 40vw;
+  margin-left: 100px;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 20px;
+  color: #999999;
 }
-
-#nav-icon3 span:nth-child(4) {
-  top: 24px;
+body header .container {
+  z-index: 0;
+  position: absolute;
+  width: auto;
+  height: auto;
+  top: 200px;
+  right: 100px;
 }
-
-#nav-icon3.open span:nth-child(1) {
-  top: 18px;
-  width: 0%;
-  left: 50%;
+body section {
+  background-color: #FEFBF6;
 }
-
-#nav-icon3.open span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
+body section .container {
+  margin: 0;
+  padding: 0;
+  max-width: 100vw;
 }
-
-#nav-icon3.open span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+body section .container h2 {
+  margin-top: 150px;
+  font-family: Bree Serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 50px;
+  color: #171717;
+  margin-left: 100px;
 }
-
-#nav-icon3.open span:nth-child(4) {
-  top: 18px;
-  width: 0%;
-  left: 50%;
+body section .container h4 {
+  width: 40vw;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 20px;
+  color: #999999;
+  margin: 20px 100px;
 }
-
-.navbar-toggler:focus {
-  outline: none;
+body section .container .reverse {
+  text-align: right;
+  right: 0;
+  margin-right: 100px;
+}
+body section .container img {
+  position: absolute;
+  right: 100px;
+  margin-top: -250px;
+}
+body section .container .reverseImg {
+  left: 100px;
+}
+body section svg {
+  margin: 200px auto;
+}
+body section svg:nth-child(2) {
+  transform: scaleX(-1);
 }
 
 /*# sourceMappingURL=styles.css.map */
