--- a/styles.scss
+++ b/styles.scss
@@ -7,9 +7,88 @@ body{
   overflow-x: hidden;
 
   nav{
+    top: 0;
     background-color: #FFFFFF;
     width: 100%;
     border-bottom: 3px solid #F5F0E8;
+    z-index: 100;
+
+
+    .navbar-toggler:focus{
+      outline: none;
+    }
+
+    #nav-icon3{
+      width: 40px;
+      height: 20px;
+      position: relative;
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+      -webkit-transition: .5s ease-in-out;
+      -moz-transition: .5s ease-in-out;
+      -o-transition: .5s ease-in-out;
+      transition: .5s ease-in-out;
+      cursor: pointer;
+    }
+
+    #nav-icon3 span{
+      display: block;
+      position: absolute;
+      height: 6px;
+      width: 100%;
+      background: #FFC126;
+      border-radius: 6px;
+      opacity: 1;
+      left: 0;
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+      -webkit-transition: .25s ease-in-out;
+      -moz-transition: .25s ease-in-out;
+      -o-transition: .25s ease-in-out;
+      transition: .25s ease-in-out;
+    }
+
+    #nav-icon3 span:nth-child(1) {
+      top: 0px;
+    }
+
+    #nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
+      top: 12px;
+    }
+
+    #nav-icon3 span:nth-child(4) {
+      top: 24px;
+    }
+
+    #nav-icon3.open span:nth-child(1) {
+      top: 18px;
+      width: 0%;
+      left: 50%;
+    }
+
+    #nav-icon3.open span:nth-child(2) {
+      -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+      -o-transform: rotate(45deg);
+      transform: rotate(45deg);
+    }
+
+    #nav-icon3.open span:nth-child(3) {
+      -webkit-transform: rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+      -o-transform: rotate(-45deg);
+      transform: rotate(-45deg);
+    }
+
+    #nav-icon3.open span:nth-child(4) {
+      top: 18px;
+      width: 0%;
+      left: 50%;
+    }
   }
 
   .navbar{
@@ -36,90 +115,109 @@ body{
 
       .nav-link{
         color: #949494;
+        font-family: "Open Sans";
       }
     }
   }
 
-  .svg1{
-    fill: none;
-    stroke: #F5F0E8;
-    stroke-width: 8px;
-    stroke-linejoin: round;
+  header{
+    top: 0;
+    width: 100%;
+    height: 700px;
+    background-color: #ffffff;
+
+    h1{
+      padding-top: 300px;
+      margin-left: 100px;
+      font: {
+        family: Bree Serif;
+        style: normal;
+        weight: normal;
+        size: 60px;
+      }
+      color: #171717;
+    }
+
+    h3{
+      margin-top: 20px;
+      width: 40vw;
+      margin-left: 100px;
+      font: {
+        family: Open Sans;
+        style: normal;
+        weight: 300;
+        size: 20px;
+      }
+      color: #999999;
+    }
+
+    .container{
+      z-index: 0;
+      position: absolute;
+      width: auto;
+      height: auto;
+      top: 200px;
+      right: 100px;
+    }
   }
-}
 
-#nav-icon3{
-  width: 40px;
-  height: 20px;
-  position: relative;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
-}
+  section{
+    background-color: #FEFBF6;
 
-#nav-icon3 span{
-  display: block;
-  position: absolute;
-  height: 6px;
-  width: 100%;
-  background: #FFC126;
-  border-radius: 6px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
-}
+    .container{
+      margin: 0;
+      padding: 0;
+      max-width: 100vw;
 
-#nav-icon3 span:nth-child(1) {
-  top: 0px;
-}
 
-#nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
-  top: 12px;
-}
+      h2{
+        margin-top: 150px;
+        font:{
+          family: Bree Serif;
+          style: normal;
+          weight: normal;
+          size: 50px;
+        }
+        color: #171717;
+        margin-left: 100px;
+      }
 
-#nav-icon3 span:nth-child(4) {
-  top: 24px;
-}
 
-#nav-icon3.open span:nth-child(1) {
-  top: 18px;
-  width: 0%;
-  left: 50%;
-}
+      h4{
+        width: 40vw;
+        font:{
+          family: Open Sans;
+          style: normal;
+          weight: 300;
+          size: 20px;
+        }
+        color: #999999;
+        margin: 20px 100px;
+      }
 
-#nav-icon3.open span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
+      .reverse{
+        text-align: right;
+        right: 0;
+        margin-right: 100px;
+      }
 
-#nav-icon3.open span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
+      img{
+        position: absolute;
+        right: 100px;
+        margin-top: -250px;
+      }
 
-#nav-icon3.open span:nth-child(4) {
-  top: 18px;
-  width: 0%;
-  left: 50%;
-}
+      .reverseImg{
+        left: 100px;
+      }
+    }
 
-.navbar-toggler:focus{
-  outline: none;
+    svg{
+      margin: 200px auto;
+    }
+
+    svg:nth-child(2){
+      transform: scaleX(-1);
+    }
+  }
 }
