--- a/styles.scss
+++ b/styles.scss
@@ -1,9 +1,15 @@
+html{
+  width: 100%;
+  height: 100%;
+}
+
 body{
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
-  background-color: #FEFBF6;
+  min-height: 100%;
+
+  background-color: #FFF3E0;
   overflow-x: hidden;
 
   nav{
@@ -156,13 +162,18 @@ body{
       position: absolute;
       width: auto;
       height: auto;
-      top: 200px;
+      top: 150px;
       right: 100px;
+
+      img{
+        width: 35vw;
+        height: auto;
+      }
     }
   }
 
   section{
-    background-color: #FEFBF6;
+    background-color: #FFF3E0;
 
     .container{
       margin: 0;
@@ -195,6 +206,13 @@ body{
         margin: 20px 100px;
       }
 
+      .reverseH{
+        text-align: right;
+        margin-right: 100px;
+        float: right;
+      }
+
+
       .reverse{
         text-align: right;
         right: 0;
@@ -202,13 +220,16 @@ body{
       }
 
       img{
+        width: 30vw;
+        height: auto;
         position: absolute;
         right: 100px;
         margin-top: -250px;
       }
 
       .reverseImg{
-        left: 100px;
+        position: relative;
+        margin-left: 200px;
       }
     }
 
@@ -219,5 +240,110 @@ body{
     svg:nth-child(2){
       transform: scaleX(-1);
     }
+  }
+}
+
+
+
+@media only screen and (max-width: 1555px){
+  body{
+    header{
+      h1{
+        font-size: 40px;
+        padding-top: 300px;
+      }
+
+      h3{
+        font-size: 20px;
+      }
+
+      .container{
+        top: 250px;
+        right: 8vw;
+
+        img{
+          width: 25vw;
+          height: auto;
+        }
+      }
+
+    }
+
+    section{
+      h2{
+        font-size: 35px !important;
+      }
+
+      h4{
+        font-size: 15px !important;
+      }
+
+      svg{
+        margin: 100px auto;
+      }
+    }
+
+  }
+}
+
+@media only screen and (max-width: 850px){
+  body{
+    header{
+
+      h1{
+        font-size: 30px;
+        padding-top: 300px;
+      }
+
+      h3{
+        font-size: 15px;
+      }
+
+      .container{
+        top: 100px;
+        left: 100px;
+
+        img{
+          width: 200px;
+          height: auto;
+        }
+      }
+    }
+
+    section{
+      .container{
+        h2{
+          margin-top: 50px;
+        }
+
+        .reverseH{
+          margin-bottom: 300px;
+        }
+
+        img{
+          position: relative;
+          left: 100px;
+          margin-top: 50px;
+          width: 300px;
+        }
+
+        .reverseImg{
+          position: absolute;
+          right: 100px;
+          margin-top: 250px;
+          left: auto;
+        }
+      }
+
+      svg{
+        margin: 50px auto;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 400px){
+  body{
+    min-width: 100vw !important;
   }
 }
