--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,7 @@
 html{
   width: 100%;
   height: 100%;
+  position: absolute;
 }
 
 body{
@@ -16,7 +17,7 @@ body{
     top: 0;
     background-color: #FFFFFF;
     width: 100%;
-    border-bottom: 3px solid #F5F0E8;
+    border-bottom: 3px solid #d6c9b6;
     z-index: 100;
 
 
@@ -25,7 +26,7 @@ body{
     }
 
     #nav-icon3{
-      width: 40px;
+      width: 30px;
       height: 20px;
       position: relative;
       -webkit-transform: rotate(0deg);
@@ -42,7 +43,7 @@ body{
     #nav-icon3 span{
       display: block;
       position: absolute;
-      height: 6px;
+      height: 4px;
       width: 100%;
       background: #FFC126;
       border-radius: 6px;
@@ -63,11 +64,11 @@ body{
     }
 
     #nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
-      top: 12px;
+      top: 8px;
     }
 
     #nav-icon3 span:nth-child(4) {
-      top: 24px;
+      top: 16px;
     }
 
     #nav-icon3.open span:nth-child(1) {
@@ -172,7 +173,7 @@ body{
     }
   }
 
-  section{
+  .section1{
     background-color: #FFF3E0;
 
     .container{
@@ -231,6 +232,10 @@ body{
         position: relative;
         margin-left: 200px;
       }
+
+      .margin{
+        padding-bottom: 50px;
+      }
     }
 
     svg{
@@ -240,6 +245,11 @@ body{
     svg:nth-child(2){
       transform: scaleX(-1);
     }
+  }
+
+  .section2{
+    background-color: #FFC126;
+    min-height: 200px;
   }
 }
 
@@ -297,6 +307,7 @@ body{
 
       h3{
         font-size: 15px;
+        width: 60vw;
       }
 
       .container{
@@ -310,7 +321,8 @@ body{
       }
     }
 
-    section{
+    .section1{
+      padding-bottom: 50px;
       .container{
         h2{
           margin-top: 50px;
@@ -339,11 +351,5 @@ body{
         margin: 50px auto;
       }
     }
-  }
-}
-
-@media only screen and (max-width: 400px){
-  body{
-    min-width: 100vw !important;
   }
 }
