--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-html {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -109,94 +103,59 @@ body .navbar-nav .nav-item .nav-link {
   font-family: "Open Sans";
 }
 body header {
-  top: 0;
-  width: 100%;
-  height: 700px;
   background-color: #ffffff;
 }
-body header h1 {
-  padding-top: 300px;
-  margin-left: 100px;
+body header .row {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  margin: auto 10px;
+}
+body header .row img {
+  width: 50vw;
+  height: auto;
+  margin: 100px auto 30px auto;
+}
+body header .row h1 {
   font-family: Bree Serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 60px;
+  font-size: 30px;
   color: #171717;
 }
-body header h3 {
-  margin-top: 20px;
-  width: 40vw;
-  margin-left: 100px;
+body header .row h3 {
   font-family: Open Sans;
   font-style: normal;
   font-weight: 300;
-  font-size: 20px;
+  font-size: 15px;
   color: #999999;
 }
-body header .container {
-  z-index: 0;
-  position: absolute;
-  width: auto;
-  height: auto;
-  top: 150px;
-  right: 100px;
+body .section1 .row {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  margin: auto 10px;
 }
-body header .container img {
-  width: 35vw;
-  height: auto;
-}
-body .section1 {
-  background-color: #FFF3E0;
-}
-body .section1 .container {
-  margin: 0;
-  padding: 0;
-  max-width: 100vw;
-}
-body .section1 .container h2 {
-  margin-top: 150px;
+body .section1 .row h2 {
   font-family: Bree Serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 50px;
+  font-size: 25px;
   color: #171717;
-  margin-left: 50px;
+  margin-top: 30px;
 }
-body .section1 .container h4 {
-  width: 40vw;
+body .section1 .row h4 {
   font-family: Open Sans;
   font-style: normal;
   font-weight: 300;
-  font-size: 20px;
+  font-size: 12px;
   color: #999999;
-  margin: 20px 100px;
 }
-body .section1 .container .reverseH {
-  text-align: right;
-  margin-right: 100px;
-  float: right;
-}
-body .section1 .container .reverse {
-  text-align: right;
-  right: 0;
-  margin-right: 50px;
-}
-body .section1 .container img {
-  width: 30vw;
-  height: auto;
-  position: absolute;
-  right: 100px;
-  margin-top: -250px;
-}
-body .section1 .container .reverseImg {
-  position: relative;
-  margin-left: 200px;
-}
-body .section1 .container .margin {
-  padding-bottom: 50px;
-}
-body .section1 svg {
-  margin: 200px auto;
+body .section1 .row img {
+  width: 60vw;
+  margin: 20px auto 40px auto;
 }
 body .section1 svg:nth-child(2) {
   transform: scaleX(-1);
@@ -206,78 +165,94 @@ body .section2 {
   min-height: 200px;
 }
 
-@media only screen and (max-width: 1555px) {
-  body header h1 {
-    font-size: 40px;
-    padding-top: 300px;
+@media only screen and (min-width: 768px) {
+  body header .row {
+    text-align: left;
+    justify-content: start;
+    margin: auto;
+    margin-left: 100px;
   }
-  body header h3 {
-    font-size: 20px;
-  }
-  body header .container {
-    top: 250px;
-    right: 8vw;
-  }
-  body header .container img {
-    width: 25vw;
-    height: auto;
-  }
-  body .section1 h2 {
-    font-size: 35px !important;
-  }
-  body .section1 h4 {
-    font-size: 15px !important;
-  }
-  body .section1 svg {
-    margin: 100px auto;
-  }
-}
-@media only screen and (max-width: 850px) {
-  body header h1 {
-    font-size: 30px;
-    padding-top: 300px;
-  }
-  body header h3 {
-    font-size: 15px;
-    width: 60vw;
-  }
-  body header h4 {
-    width: 40vw;
-  }
-  body header .container {
-    top: 100px;
-    left: 100px;
-  }
-  body header .container img {
-    width: 170px;
-    height: auto;
-  }
-  body .section1 {
-    padding-bottom: 50px;
-  }
-  body .section1 .container h2 {
-    margin-top: 50px;
-  }
-  body .section1 .container h4 {
-    width: 60vw;
-  }
-  body .section1 .container .reverseH {
-    margin-bottom: 300px;
-  }
-  body .section1 .container img {
-    position: relative;
-    left: 100px;
-    margin-top: 50px;
-    width: 60vw;
-  }
-  body .section1 .container .reverseImg {
+  body header .row img {
     position: absolute;
     right: 100px;
-    margin-top: 200px;
-    left: auto;
+    width: 20vw;
   }
-  body .section1 svg {
-    margin: 50px auto;
+  body header .row h1 {
+    font-size: 35px;
+    margin-top: 100px;
+  }
+  body header .row h3 {
+    font-size: 17px;
+    width: 50vw;
+  }
+  body .section1 .row {
+    text-align: left;
+    justify-content: start;
+    margin: 50px auto 50px 100px;
+  }
+  body .section1 .row img {
+    position: absolute;
+    width: 20vw;
+    margin: auto;
+    right: 100px;
+  }
+  body .section1 .row h2 {
+    font-size: 30px;
+    margin-left: 50px;
+  }
+  body .section1 .row h4 {
+    font-size: 15px;
+    width: 50vw;
+  }
+  body .section1 .reverse {
+    text-align: right;
+    justify-content: flex-end;
+    margin: 50px 100px 50px auto;
+  }
+  body .section1 .reverse img {
+    position: absolute;
+    width: 20vw;
+    margin: auto;
+    left: 100px;
+    right: unset;
+  }
+  body .section1 .reverse h2 {
+    margin-right: 150px;
+  }
+  body .section1 .reverse h4 {
+    text-align: right;
+    width: 100vw;
+    padding-left: 40vw;
+    padding-right: 100px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  body header .row {
+    margin-top: 50px;
+  }
+  body header .row h1 {
+    font-size: 50px;
+  }
+  body header .row h3 {
+    font-size: 20px;
+    margin-bottom: 150px;
+  }
+  body header .row img {
+    margin-top: 50px;
+    width: 30vw;
+    max-width: 500px;
+  }
+  body .section1 .row h2 {
+    font-size: 40px;
+    margin-bottom: 30px;
+    margin-left: 50px;
+  }
+  body .section1 .row h4 {
+    font-size: 20px;
+    margin-bottom: 50px;
+  }
+  body .section1 .reverse {
+    margin-top: 100px;
   }
 }
 
