--- a/styles.scss
+++ b/styles.scss
@@ -1,9 +1,3 @@
-html{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
 body{
   margin: 0;
   padding: 0;
@@ -128,118 +122,77 @@ body{
   }
 
   header{
-    top: 0;
-    width: 100%;
-    height: 700px;
     background-color: #ffffff;
 
-    h1{
-      padding-top: 300px;
-      margin-left: 100px;
-      font: {
-        family: Bree Serif;
-        style: normal;
-        weight: normal;
-        size: 60px;
-      }
-      color: #171717;
-    }
-
-    h3{
-      margin-top: 20px;
-      width: 40vw;
-      margin-left: 100px;
-      font: {
-        family: Open Sans;
-        style: normal;
-        weight: 300;
-        size: 20px;
-      }
-      color: #999999;
-    }
-
-    .container{
-      z-index: 0;
-      position: absolute;
-      width: auto;
-      height: auto;
-      top: 150px;
-      right: 100px;
+    .row{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+      margin: auto 10px;
 
       img{
-        width: 35vw;
+        width: 50vw;
         height: auto;
+        margin: 100px auto 30px auto;
+      }
+
+      h1{
+        font: {
+          family: Bree Serif;
+          style: normal;
+          weight: normal;
+          size: 30px;
+        }
+        color: #171717;
+      }
+
+      h3{
+        font: {
+          family: Open Sans;
+          style: normal;
+          weight: 300;
+          size: 15px;
+        }
+        color: #999999;
       }
     }
   }
 
   .section1{
-    background-color: #FFF3E0;
 
-    .container{
-      margin: 0;
-      padding: 0;
-      max-width: 100vw;
-
+    .row{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+      margin: auto 10px;
 
       h2{
-        margin-top: 150px;
         font:{
           family: Bree Serif;
           style: normal;
           weight: normal;
-          size: 50px;
+          size: 25px;
         }
         color: #171717;
-        margin-left: 50px;
+        margin-top: 30px;
       }
 
-
       h4{
-        width: 40vw;
         font:{
           family: Open Sans;
           style: normal;
           weight: 300;
-          size: 20px;
+          size: 12px;
         }
         color: #999999;
-        margin: 20px 100px;
-      }
-
-      .reverseH{
-        text-align: right;
-        margin-right: 100px;
-        float: right;
-      }
-
-
-      .reverse{
-        text-align: right;
-        right: 0;
-        margin-right: 50px;
       }
 
       img{
-        width: 30vw;
-        height: auto;
-        position: absolute;
-        right: 100px;
-        margin-top: -250px;
+        width: 60vw;
+        margin: 20px auto 40px auto;
       }
-
-      .reverseImg{
-        position: relative;
-        margin-left: 200px;
-      }
-
-      .margin{
-        padding-bottom: 50px;
-      }
-    }
-
-    svg{
-      margin: 200px auto;
     }
 
     svg:nth-child(2){
@@ -253,110 +206,125 @@ body{
   }
 }
 
-
-
-@media only screen and (max-width: 1555px){
+@media only screen and (min-width: 768px) {
   body{
-    header{
-      h1{
-        font-size: 40px;
-        padding-top: 300px;
-      }
-
-      h3{
-        font-size: 20px;
-      }
-
-      .container{
-        top: 250px;
-        right: 8vw;
+    header {
+      .row {
+        text-align: left;
+        justify-content: start;
+        margin: auto;
+        margin-left: 100px;
 
         img{
-          width: 25vw;
-          height: auto;
+          position: absolute;
+          right: 100px;
+          width: 20vw;
         }
-      }
 
-    }
+        h1{
+          font-size: 35px;
+          margin-top: 100px;
+        }
 
-    .section1{
-      h2{
-        font-size: 35px !important;
-      }
-
-      h4{
-        font-size: 15px !important;
-      }
-
-      svg{
-        margin: 100px auto;
-      }
-    }
-
-  }
-}
-
-@media only screen and (max-width: 850px){
-  body{
-    header{
-
-      h1{
-        font-size: 30px;
-        padding-top: 300px;
-      }
-
-      h3{
-        font-size: 15px;
-        width: 60vw;
-      }
-
-      h4{
-        width: 40vw;
-      }
-
-      .container{
-        top: 100px;
-        left: 100px;
-
-        img{
-          width: 170px;
-          height: auto;
+        h3{
+          font-size: 17px;
+          width: 50vw;
         }
       }
     }
 
     .section1{
-      padding-bottom: 50px;
-      .container{
+      .row{
+        text-align: left;
+        justify-content: start;
+        margin: 50px auto 50px 100px;
+
+        img{
+          position: absolute;
+          width: 20vw;
+          margin: auto;
+          right: 100px;
+        }
+
         h2{
-          margin-top: 50px;
+          font-size: 30px;
+          margin-left: 50px;
         }
 
         h4{
-          width: 60vw;
-        }
-
-        .reverseH{
-          margin-bottom: 300px;
-        }
-
-        img{
-          position: relative;
-          left: 100px;
-          margin-top: 50px;
-          width: 60vw;
-        }
-
-        .reverseImg{
-          position: absolute;
-          right: 100px;
-          margin-top: 200px;
-          left: auto;
+          font-size: 15px;
+          width: 50vw;
         }
       }
 
-      svg{
-        margin: 50px auto;
+      .reverse{
+        text-align: right;
+        justify-content: flex-end;
+        margin: 50px 100px 50px auto;
+
+        img{
+          position: absolute;
+          width: 20vw;
+          margin: auto;
+          left: 100px;
+          right: unset;
+        }
+
+        h2{
+          margin-right: 150px;
+        }
+
+        h4{
+          text-align: right;
+          width: 100vw;
+          padding-left: 40vw;
+          padding-right: 100px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 1200px){
+  body{
+    header{
+      .row{
+        margin-top: 50px;
+
+        h1{
+          font-size: 50px;
+        }
+
+        h3{
+          font-size: 20px;
+          margin-bottom: 150px;
+        }
+
+        img{
+          margin-top: 50px;
+          width: 30vw;
+          max-width: 500px;
+        }
+      }
+    }
+
+    .section1{
+
+      .row{
+        h2{
+          font-size: 40px;
+          margin-bottom: 30px;
+          margin-left: 50px;
+        }
+
+        h4{
+          font-size: 20px;
+          margin-bottom: 50px;
+        }
+      }
+
+      .reverse{
+          margin-top: 100px;
       }
     }
   }
