--- a/styles.css
+++ b/styles.css
@@ -161,10 +161,79 @@ body .section1 svg:nth-child(2) {
   transform: scaleX(-1);
 }
 body .section2 {
-  background-color: #FFC126;
+  background-color: #c59830;
   min-height: 200px;
 }
+body .section2 .container {
+  display: flex;
+  margin: auto;
+  text-align: center;
+  flex-direction: column;
+}
+body .section2 .container h2 {
+  margin: auto;
+  padding-top: 50px;
+  font-family: Bree Serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  color: white;
+}
+body .section2 .container .buttons {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: auto;
+  margin-top: 30px;
+  margin-bottom: 70px;
+}
+body .section2 .container .buttons button {
+  margin: auto 20px;
+  width: 200px;
+  height: 50px;
+  line-height: 25px;
+  background-color: transparent;
+  border: 4px solid white;
+  color: white;
+  margin-bottom: 20px;
+  font-family: "Open Sans";
+  font-size: 20px;
+}
+body .section2 .container .buttons button:hover {
+  animation: text-shadow-drop-center 0.3s both;
+}
+body .section2 .container .row {
+  display: inline-block;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
+}
+body .section2 .container .row .items {
+  display: grid;
+  grid-template-columns: 90vw;
+  grid-gap: 20px;
+  text-align: center;
+  justify-content: center;
+  margin: auto;
+  margin-bottom: 20px;
+}
+body .section2 .container .row .items img {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
 
+@keyframes text-shadow-drop-center {
+  0% {
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    font-size: 20px;
+  }
+  100% {
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
+    font-size: 25px;
+  }
+}
 @media only screen and (min-width: 768px) {
   body header .row {
     text-align: left;
@@ -225,6 +294,10 @@ body .section2 {
     padding-left: 40vw;
     padding-right: 100px;
   }
+  body .section2 .container .row .items {
+    display: grid;
+    grid-template-columns: 30vw 30vw 30vw;
+  }
 }
 @media only screen and (min-width: 1200px) {
   body header .row {
@@ -253,6 +326,13 @@ body .section2 {
   }
   body .section1 .reverse {
     margin-top: 100px;
+  }
+  body .section2 .container .buttons {
+    flex-direction: row;
+  }
+  body .section2 .container .row .items {
+    display: grid;
+    grid-template-columns: 20vw 20vw 20vw 20vw;
   }
 }
 
