--- a/styles.scss
+++ b/styles.scss
@@ -201,8 +201,90 @@ body{
   }
 
   .section2{
-    background-color: #FFC126;
+    background-color: #c59830;
     min-height: 200px;
+
+    .container{
+      display: flex;
+      margin: auto;
+      text-align: center;
+      flex-direction: column;
+
+      h2{
+        margin: auto;
+        padding-top: 50px;
+        font:{
+          family: Bree Serif;
+          style: normal;
+          weight: normal;
+          size: 40px;
+        }
+        color: white;
+      }
+
+      .buttons{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin: auto;
+        margin-top: 30px;
+        margin-bottom: 70px;
+
+        button{
+          margin: auto 20px;
+          width: 200px;
+          height: 50px;
+          line-height: 25px;
+          background-color: transparent;
+          border: 4px solid white;
+          color: white;
+          margin-bottom: 20px;
+          font:{
+            family: "Open Sans";
+            size: 20px;
+          }
+
+          &:hover{
+            animation: text-shadow-drop-center 0.3s both;
+          }
+        }
+      }
+
+      .row{
+        display: inline-block;
+        flex-wrap: wrap;
+        text-align: center;
+        justify-content: center;
+
+        .items{
+          display:grid;
+          grid-template-columns: 90vw;
+          grid-gap: 20px;
+          text-align: center;
+          justify-content: center;
+          margin: auto;
+          margin-bottom: 20px;
+
+          img{
+            width: 100%;
+            height: auto;
+            max-width: 100%;
+            max-height: 100%;
+          }
+        }
+      }
+    }
+  }
+}
+
+@keyframes text-shadow-drop-center {
+  0% {
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    font-size: 20px;
+  }
+  100% {
+    box-shadow: 0 0 30px rgba(0, 0, 0, .6);
+    font-size: 25px;
   }
 }
 
@@ -282,6 +364,17 @@ body{
         }
       }
     }
+
+    .section2{
+      .container{
+        .row{
+          .items {
+            display: grid;
+            grid-template-columns: 30vw 30vw 30vw;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -325,6 +418,21 @@ body{
 
       .reverse{
           margin-top: 100px;
+      }
+    }
+
+    .section2{
+      .container{
+        .buttons{
+          flex-direction: row;
+        }
+
+        .row{
+          .items {
+            display: grid;
+            grid-template-columns: 20vw 20vw 20vw 20vw;
+          }
+        }
       }
     }
   }
