--- a/styles.css
+++ b/styles.css
@@ -202,6 +202,11 @@ body .section2 .container .buttons button {
 body .section2 .container .buttons button:hover {
   animation: text-shadow-drop-center 0.3s both;
 }
+body .section2 .container .buttons .active, body .section2 .container .buttons .active:focus, body .section2 .container .buttons .active:active {
+  background-color: white;
+  border: white;
+  outline: none;
+}
 body .section2 .container .row {
   display: inline-block;
   flex-wrap: wrap;
@@ -222,6 +227,22 @@ body .section2 .container .row .items img {
   height: auto;
   max-width: 100%;
   max-height: 100%;
+}
+body .section2 .container .row .more {
+  margin: 30px;
+  width: 200px;
+  height: 50px;
+  line-height: 25px;
+  background-color: transparent;
+  border: 4px solid white;
+  color: white;
+  margin-bottom: 20px;
+  cursor: pointer;
+  font-family: "Open Sans";
+  font-size: 20px;
+}
+body .section2 .container .row .more:hover {
+  animation: text-shadow-drop-center 0.3s both;
 }
 
 @keyframes text-shadow-drop-center {
