--- a/styles.scss
+++ b/styles.scss
@@ -247,6 +247,14 @@ body{
           &:hover{
             animation: text-shadow-drop-center 0.3s both;
           }
+
+
+        }
+
+        .active, .active:focus, .active:active{
+          background-color: white;
+          border: white;
+          outline: none;
         }
       }
 
@@ -270,6 +278,26 @@ body{
             height: auto;
             max-width: 100%;
             max-height: 100%;
+          }
+        }
+
+        .more{
+          margin: 30px;
+          width: 200px;
+          height: 50px;
+          line-height: 25px;
+          background-color: transparent;
+          border: 4px solid white;
+          color: white;
+          margin-bottom: 20px;
+          cursor: pointer;
+          font:{
+            family: "Open Sans";
+            size: 20px;
+          }
+
+          &:hover{
+            animation: text-shadow-drop-center 0.3s both;
           }
         }
       }
