--- a/styles.css
+++ b/styles.css
@@ -180,8 +180,8 @@ body .section2 .container h2 {
   color: white;
 }
 body .section2 .container .buttons {
-  display: flex;
-  flex-direction: column;
+  display: inline-block;
+  /*flex-direction: column;*/
   text-align: center;
   margin: auto;
   margin-top: 30px;
@@ -349,7 +349,7 @@ body .section2 .container .row .more:hover {
     margin-top: 100px;
   }
   body .section2 .container .buttons {
-    flex-direction: row;
+    /*flex-direction: row;*/
   }
   body .section2 .container .row .items {
     display: grid;
